viewModel and adapter added, koin updated; data is fetched and displayed on the screen correctly

--- a/app/src/main/res/layout/activity_missions_list.xml
+++ b/app/src/main/res/layout/activity_missions_list.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/toolbar_missions_activity"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorOnPrimary"
+                android:background="?attr/colorPrimaryVariant"
                 app:layout_scrollFlags="scroll|enterAlways"
                 android:elevation="@dimen/elevation_toolbar">
 
